Add lattice post-processing and GUI params

--- a/MAAS-SFRThelper/App.config
+++ b/MAAS-SFRThelper/App.config
@@ -8,6 +8,10 @@
     <add key="EULAAgree" value="false"/>
     <add key="ValidForClinicalUse" value="false"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="TumourEdgeBuffer_mm" value="5"/>
+    <add key="OARBuffer_mm" value="15"/>
+    <add key="BoostShell_mm" value="2"/>
+    <add key="OuterRing_mm" value="10"/>
   </appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
