--- a/MAAS-SFRThelper/MAAS-SFRThelper.csproj
+++ b/MAAS-SFRThelper/MAAS-SFRThelper.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>H:\My Documents\Code\Plugins\SFRT\</OutputPath>
+    <OutputPath>..\..\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <LangVersion>7.3</LangVersion>
